infrastructure/longhorn/overlays/nishir-tailnet/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: longhorn
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    name: longhorn
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    namespace: longhorn-system
