infrastructure/longhorn/overlays/nishir-tailnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - name: longhorn
      sectionName: https
  hostnames:
    - longhorn.i.shikanime.studio
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
